# Natural_Selection_ByLYH

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  DEBUG_GUIDE.md  README.md  build.bat  build.sh
config/: config.json
guide_node/: CMakeLists.txt  CMake_Guide.md  Tree_guide.md  json_guide.md  libserial_guide.md  maze_tracking_guide.md  opencv_guide.md
guide_node/include/: calculator.hpp
guide_node/src/: calculator.cpp
include/: common.hpp  control.hpp  recognition.hpp
include/common/: camera.hpp  debug.hpp  display.hpp  math.hpp  parameter.hpp  type.hpp  uart.hpp
include/control/: controlcenter.hpp  motion.hpp
include/recognition/: crossroad.hpp  element.hpp  tracking.hpp
src/: main.cpp  task.hpp
src/common/: camera.cpp  debug.cpp  display.cpp  math.cpp  parameter.cpp  uart.cpp
src/control/: controlcenter.cpp  motion.cpp
src/recognition/: element.cpp  tracking.cpp
tool/collection_video/: CMakeLists.txt  collection_video.cpp
